[package]
name = "bcs"
version = "0.1.6"
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/zefchain/bcs"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58", optional = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[features]
default = ["std"]
std = ["thiserror", "serde/std"]

[[bench]]
name = "bcs_bench"
harness = false
