[package]
name = "bcs"
version = "0.1.6"
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/zefchain/bcs"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3.6"
proptest = "0.10.1"
proptest-derive = "0.2.0"

[[bench]]
name = "bcs_bench"
harness = false
